--- a/Git Tutorial/Gitplz.html
+++ b/Git Tutorial/Gitplz.html
@@ -9,5 +9,6 @@
    <body>
        <h1>The main title</h1>
        <p>This is what we call a paragraph it is very useful and very cool</p>
+       <p2>This is what you call a professional dip maintenance</p2>
    </body>
    </html> 
